crates/test-files/fixtures/compile_errors/bad_ingot/src/main.fe
use bar::Baz
use biz::bad::{Bur, Bud as Bar, Boo}
use biz::Bark
use none::*

contract Bar {
    pub fn a() -> foo::Foo {
        return foo::Foo(my_num: true)
    }
}

fn std() {}
